build_errors.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.8/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :
Java: 17.0.12, JVM: 17.0.12+8-LTS-286 (Oracle Corporation), Arch: amd64

> Task :compileJava
.\gradlew : C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\admin\AdminConfigScreen.java:19: war
ning: [removal] ResourceLocation(String,String) in ResourceLocation has been deprecated and marked for removal
At line:2 char:1
+ .\gradlew build 2>&1 | Out-File -FilePath "C:\Users\ray20\Desktop\del ...
+ ~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (C:\Users\ray20\...ked for removal:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    private static final ResourceLocation BACKGROUND = new ResourceLocation(DeltaOpsMod.MOD_ID, "textures/gui/admin_con
fig.png");
                                                       ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\block\entity\LootCrateBlockEntity.java:82: error
: incompatible types: ItemStackHandler cannot be converted to Container
        return ChestMenu.threeRows(id, pi, inv);
                                           ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\container\TacticalContainerBlockEntity.java:99: 
warning: [removal] ResourceLocation(String) in ResourceLocation has been deprecated and marked for removal
        net.minecraft.resources.ResourceLocation itemId = new net.minecraft.resources.ResourceLocation(picked.get());
                                                          ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\capability\ModCapabilities.java:19: warning: [re
moval] ResourceLocation(String,String) in ResourceLocation has been deprecated and marked for removal
    public static final ResourceLocation BODY_KEY = new ResourceLocation(DeltaOpsMod.MOD_ID, "body");
                                                    ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\container\TacticalContainerScreen.java:17: warni
ng: [removal] ResourceLocation(String,String) in ResourceLocation has been deprecated and marked for removal
    private static final ResourceLocation BACKGROUND = new ResourceLocation(DeltaOpsMod.MOD_ID, "textures/gui/container
_panel.png");
                                                       ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\DeltaOpsMod.java:21: warning: [removal] get() in
 FMLJavaModLoadingContext has been deprecated and marked for removal
        IEventBus modEventBus = FMLJavaModLoadingContext.get().getModEventBus();
                                                        ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\DeltaOpsMod.java:23: warning: [removal] get() in
 ModLoadingContext has been deprecated and marked for removal
        ModLoadingContext.get().registerConfig(net.minecraftforge.fml.config.ModConfig.Type.SERVER, ModConfig.SPEC);
                         ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\item\ModCreativeTab.java:25: error: cannot find 
symbol
                        output.accept(ModItems.SURGERY_KIT.get());
                                              ^
  symbol:   variable SURGERY_KIT
  location: class ModItems
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\item\ModCreativeTab.java:27: error: cannot find 
symbol
                        output.accept(ModItems.PAINKILLER.get());
                                              ^
  symbol:   variable PAINKILLER
  location: class ModItems
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\loot\AdminItemTaggingScreen.java:29: warning: [r
emoval] ResourceLocation(String,String) in ResourceLocation has been deprecated and marked for removal
    private static final ResourceLocation BACKGROUND = new ResourceLocation(DeltaOpsMod.MOD_ID, "textures/gui/admin_tag
ging.png");
                                                       ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\network\ModNetwork.java:12: warning: [removal] R
esourceLocation(String,String) in ResourceLocation has been deprecated and marked for removal
            new ResourceLocation(DeltaOpsMod.MOD_ID, "main"),
            ^
C:\Users\ray20\Desktop\delta_ops_hazardzone\src\main\java\com\deltaops\screen\SecureBoxScreen.java:18: warning: [remova
l] ResourceLocation(String,String) in ResourceLocation has been deprecated and marked for removal
    private static final ResourceLocation TEXTURE = new ResourceLocation(DeltaOpsMod.MOD_ID, "textures/gui/secure_box.p
ng");
                                                    ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors
9 warnings

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 13s
1 actionable task: 1 executed
